Correcion-nombre-archivo-jquery

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/funciones-jquery.js"></script>
 </body>
 
 </html>
